// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalContainer /> snapshot should match snapshot 1`] = `
<ModalContainer
  aria-label="Some label"
>
  <div
    aria-label="Some label"
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-exclude-focus={true}
    data-padded={false}
    data-round={0}
    role="dialog"
    tabIndex={-1}
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with aria-label 1`] = `
<ModalContainer
  aria-label="Some modal"
>
  <div
    aria-label="Some modal"
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-exclude-focus={true}
    data-padded={false}
    data-round={0}
    role="dialog"
    tabIndex={-1}
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with aria-labelledby 1`] = `
<ModalContainer
  aria-labelledby="test-id"
>
  <div
    aria-labelledby="test-id"
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-exclude-focus={true}
    data-padded={false}
    data-round={0}
    role="dialog"
    tabIndex={-1}
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with aria-modal 1`] = `
<ModalContainer
  aria-label="Some label"
  aria-modal={false}
>
  <div
    aria-label="Some label"
    aria-modal={false}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-exclude-focus={true}
    data-padded={false}
    data-round={0}
    role="dialog"
    tabIndex={-1}
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with arrow 1`] = `
<ModalContainer
  aria-label="Some label"
  showArrow={true}
>
  <div
    aria-label="Some label"
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-exclude-focus={true}
    data-padded={false}
    data-round={0}
    role="dialog"
    tabIndex={-1}
  >
    <div
      className="md-modal-container-arrow-wrapper"
      data-popper-arrow={true}
      id="arrow"
    >
      <ModalArrow
        color="primary"
      >
        <svg
          aria-hidden="true"
          className="md-modal-arrow-svg"
          data-placement="auto"
          height={24}
          viewBox="0 0 12 24"
          width={12}
          xmlns="http://www.w3.org/svg/2000"
        >
          <defs>
            <clipPath
              id="modal-arrow-cut-stroke-auto"
            >
              <path
                d="m  l  q   l "
              />
            </clipPath>
          </defs>
          <path
            clipPath="url(#modal-arrow-cut-stroke-auto)"
            d="m  l  q   l "
            data-color="primary"
          />
        </svg>
      </ModalArrow>
    </div>
  </div>
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with arrowId 1`] = `
<ModalContainer
  aria-label="Some label"
  arrowId="example-id"
>
  <div
    aria-label="Some label"
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-exclude-focus={true}
    data-padded={false}
    data-round={0}
    role="dialog"
    tabIndex={-1}
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with children 1`] = `
<ModalContainer
  aria-label="Some label"
>
  <div
    aria-label="Some label"
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-exclude-focus={true}
    data-padded={false}
    data-round={0}
    role="dialog"
    tabIndex={-1}
  >
    <div>
      Example Text
    </div>
  </div>
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with className 1`] = `
<ModalContainer
  aria-label="Some label"
  className="example-class"
>
  <div
    aria-label="Some label"
    aria-modal={true}
    className="example-class md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-exclude-focus={true}
    data-padded={false}
    data-round={0}
    role="dialog"
    tabIndex={-1}
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with color 1`] = `
<ModalContainer
  aria-label="Some label"
  color="quaternary"
>
  <div
    aria-label="Some label"
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="quaternary"
    data-elevation={0}
    data-exclude-focus={true}
    data-padded={false}
    data-round={0}
    role="dialog"
    tabIndex={-1}
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with elevation 1`] = `
<ModalContainer
  aria-label="Some label"
  elevation={8}
>
  <div
    aria-label="Some label"
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={8}
    data-exclude-focus={true}
    data-padded={false}
    data-round={0}
    role="dialog"
    tabIndex={-1}
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with focusLockProps 1`] = `
<ModalContainer
  aria-label="Some label"
  focusLockProps={
    Object {
      "restoreFocus": true,
    }
  }
>
  <FocusScope
    autoFocus={true}
    contain={true}
    restoreFocus={true}
  >
    <span
      data-focus-scope-start={true}
      hidden={true}
    />
    <div
      aria-label="Some label"
      aria-modal={true}
      className="md-modal-container-wrapper"
      data-color="primary"
      data-elevation={0}
      data-exclude-focus={true}
      data-padded={false}
      data-round={0}
      role="dialog"
      tabIndex={-1}
    />
    <span
      data-focus-scope-end={true}
      hidden={true}
    />
  </FocusScope>
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with id 1`] = `
<ModalContainer
  aria-label="Some label"
  id="example-id"
>
  <div
    aria-label="Some label"
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-exclude-focus={true}
    data-padded={false}
    data-round={0}
    id="example-id"
    role="dialog"
    tabIndex={-1}
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with isPadded 1`] = `
<ModalContainer
  aria-label="Some label"
  isPadded={true}
>
  <div
    aria-label="Some label"
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-exclude-focus={true}
    data-padded={true}
    data-round={0}
    role="dialog"
    tabIndex={-1}
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with radius 1`] = `
<ModalContainer
  aria-label="Some label"
  round={150}
>
  <div
    aria-label="Some label"
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-exclude-focus={true}
    data-padded={false}
    data-round={150}
    role="dialog"
    tabIndex={-1}
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with role 1`] = `
<ModalContainer
  aria-label="Some label"
  role="tooltip"
>
  <div
    aria-label="Some label"
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-exclude-focus={true}
    data-padded={false}
    data-round={0}
    role="tooltip"
    tabIndex={-1}
  />
</ModalContainer>
`;

exports[`<ModalContainer /> snapshot should match snapshot with style 1`] = `
<ModalContainer
  aria-label="Some label"
  style={
    Object {
      "color": "pink",
    }
  }
>
  <div
    aria-label="Some label"
    aria-modal={true}
    className="md-modal-container-wrapper"
    data-color="primary"
    data-elevation={0}
    data-exclude-focus={true}
    data-padded={false}
    data-round={0}
    role="dialog"
    style={
      Object {
        "color": "pink",
      }
    }
    tabIndex={-1}
  />
</ModalContainer>
`;
